CT/force-app/main/default/objects/CleverTap_Config__c/fields/CleverTap_API_URL__c.field-meta.xml
<CustomField>
    <fullName>CleverTap_API_URL__c</fullName>
    <description>URL endpoint for CleverTap API</description>
    <label>CleverTap API URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>